[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "gonto"
version = "0.2.0"
authors = [
    {name = "Fabien LOISON"},
]
description = "Dependency manager for WanadevStudio"
readme = "README.rst"
license = "GPL-3.0-or-later"
license-files = ["COPYING"]
requires-python = ">=3.11"
dependencies = [
    "PyYAML >= 6.0.3",
    "jsonschema >= 4.26.0",
]

[project.optional-dependencies]
dev = [
    "nox",
    "flit",
    "black",
    "flake8",
    "flake8-pyproject",
    "pytest",
    "validate-pyproject",
    "mypy",
    "sphinx",
    "furo",
    "types-PyYAML",
    "types-jsonschema",
]

[project.scripts]
gonto = "gonto.__main__:main"

[project.urls]
source = "https://gitlab.wanadev.org/tools/gonto"

[tool.black]
target-version = ["py311"]

[tool.flake8]
ignore = [
    # ↓↓ Black handles that its way... :)
    "E203",  # whitespace before ':'
    "W503",  # line break before binary operator
    "E501",  # line too long (> 79 characters)
    "E221",  # multiple spaces before operator
]
